--- a/conclusion.tex
+++ b/conclusion.tex
@@ -7,13 +7,16 @@ This section presents the conclusion of study report.
 
 \section{Conclusion}
 
-In this paper we have tried to present a picture of the methods and tools of data analytics. They are summed up under three categories. Our motivation was to study the various methods and practices used by researchers and businesses.
+This paper has tried to present a study of the current research in the financial domain. Research about the techniques used to service and extract better value from data. They are summed up under three categories. Our motivation was to study the various methods and practices used by researchers and businesses.
 We hope this paper encourage new companies to apply softwares and schemes to analyze data. The analytic results could give them insights about
 To achieve what was not perceived, to deduce what was not understood is all made possible with data analytics. Thus it is our effort that the topics discussed in this paper would be of use to those who step into the world of Analytics without knowledge of background.
 
 %\section{Recommendations}
 %
 %Text..
+
+\section{Possible research areas}
+Data analytics is being 
 
 \FloatBarrier
 
