--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,25 @@
 
+@article{malliaris2015drives,
+	title={What drives gold returns? A decision tree analysis},
+	author={Malliaris, AG and Malliaris, Mary},
+	journal={Finance Research Letters},
+	volume={13},
+	pages={45--53},
+	year={2015},
+	publisher={Elsevier}
+}
+
+@article{das2013big,
+	title={Big data analytics: A framework for unstructured data analysis},
+	author={Das, TK and Kumar, P Mohan},
+	journal={International Journal of Engineering Science \& Technology},
+	volume={5},
+	number={1},
+	pages={153},
+	year={2013}
+}
+
+
 @misc{KDnuggets,
 	Title = {10 reasons why I love data and analytics | KDnuggets},
 	Author = {Balm, Paul},
