--- a/thesis.tex
+++ b/thesis.tex
@@ -11,8 +11,8 @@
 \usepackage{graphicx}
 \usepackage{latexsym}
 \usepackage{amssymb,amsthm,amsmath}
-%\usepackage[notocbib]{apacite}
-\usepackage{apacite}
+\usepackage[notocbib]{apacite}
+%\usepackage{apacite}
 \usepackage{verbatim}
 \usepackage{multirow}
 \usepackage{bm}
@@ -37,8 +37,8 @@
 \usepackage{enumitem}
 \usepackage[usenames, dvipsnames]{color}
 \usepackage[table]{xcolor}
-\usepackage{named}
-\usepackage[bookmarks]{hyperref}
+%\usepackage{named}
+%\usepackage[bookmarks]{hyperref}
 
 
 \newcommand{\oops}[1]{\bf{#1}}
@@ -90,7 +90,6 @@
 
 \bibliographystyle{apacite}
 \bibliography{references}
-
 
 % COMMENT THE LINES ABOUT APPENDICS OUT IF YOU DO NOT HAVE THIS SECTION.
 
