--- a/chapter2.tex
+++ b/chapter2.tex
@@ -306,7 +306,11 @@ Big data analytics in general sheds light on a particular subject, but on the ot
 Generally the techniques are used to optimize output, schedule and manage inventory for supply systems
 
 \section{Game theory}
-
+\label{game-theory}
+This is a technique for analyzing the end result by the study of conflict and co-operation of the independent agents. Agents may be groups or individuals or a combination of these. Game theory came into existence in 1944 when John van Neumann \& Oskar Morgenstern published \textit{``Theory of Games and Economic Behavior``}.
+Game theory has been successfully applied to design of auctions. 
+United states raised billions of dollars by allocating resources more efficiently with auctions designed with Game theory, compared to the ones allocated by traditional auctions.
+Automated decision making processes have been designed and modeled with game theory principles. 
 %
 %
 %
