--- a/chapter2.tex
+++ b/chapter2.tex
@@ -311,7 +311,9 @@ This is a technique for analyzing the end result by the study of conflict and co
 Game theory has been successfully applied to design of auctions. 
 United states raised billions of dollars by allocating resources more efficiently with auctions designed with Game theory, compared to the ones allocated by traditional auctions.
 Automated decision making processes have been designed and modeled with game theory principles. The process is to model the situation as a game into two types \textbf{ \textit{Coalitional} and \textit{Noncooperative} game theory}.
+\newline A research titled ``Participation against competition in Banking Markets based on cognitive game theory``~\shortcite{Gilli2011337} studies the possibility of cooperation between micro capital market and banks. In addition they proposed a model for income calculation and allocation between banks.
 
+In conclusion they found that banks could earn more profits if they co-operated instead of competing.
 
 
 %
@@ -324,6 +326,23 @@ Automated decision making processes have been designed and modeled with game the
 
 \section{Optimization Techniques} 
 \label{optimization-techniques}
+Types of optimization methods are :
+\begin{enumerate}
+	\item Classical techniques : used to find the optimum solution using differential calculus. Practically these have limited scope as some objective functions which may not be differentiable or continuous. 
+	\begin{itemize}
+		\item Linear programming
+		\item Integer programming
+		\item Quadratic programming
+		\item NonLinear programming
+	\end{itemize}
+	\item Advanced techniques also can be termed as Heuristics
+	\begin{enumerate}
+		\item Ant colony optimization
+		\item Genetic algorithms
+		\item Simulated annealing
+		\item Hill climbing
+	\end{enumerate}
+\end{enumerate}
 
 %
 %
