--- a/references.bib
+++ b/references.bib
@@ -195,3 +195,40 @@
 	Year = 1996,
 	note = {Accessed: 2017-06-15}
 }
+
+@incollection{Gilli2011337,
+
+title = "Chapter Twelve - Heuristic Methods in a Nutshell ",
+
+editor = "Gilli, Manfred and Maringer, Dietmar  and Schumann, Enrico ",
+
+booktitle = "Numerical Methods and Optimization in Finance ",
+
+publisher = "Academic Press",
+
+edition = "",
+
+address = "San Diego",
+
+year = "2011",
+
+pages = "337 - 379",
+
+isbn = "978-0-12-375662-6",
+
+doi = "https://doi.org/10.1016/B978-0-12-375662-6.00012-2",
+
+url = "http://www.sciencedirect.com/science/article/pii/B9780123756626000122",
+
+author = "Manfred Gilli and Dietmar Maringer and Enrico Schumann",
+
+keywords = "Optimization heuristics",
+
+keywords = "Financial Optimization",
+
+keywords = "Numerical methods in finance",
+
+keywords = "Constraints "
+
+}
+
