--- a/chapter2.tex
+++ b/chapter2.tex
@@ -313,7 +313,7 @@ United states raised billions of dollars by allocating resources more efficientl
 Automated decision making processes have been designed and modeled with game theory principles. The process is to model the situation as a game into two types \textbf{ \textit{Coalitional} and \textit{Noncooperative} game theory}.
 \newline A research titled ``Participation against competition in Banking Markets based on cognitive game theory``~\shortcite{Gilli2011337} studies the possibility of cooperation between micro capital market and banks. In addition they proposed a model for income calculation and allocation between banks.
 
-In conclusion they found that banks could earn more profits if they co-operated instead of competing.
+In conclusion they found that banks could earn more profits if they co-operated instead of competing.\part{title}
 
 
 %
